# rust-mazes

./: Cargo.toml  README.md  justfile  rustfmt.toml
.config/: nextest.toml
src/: main.rs  maze.rs
